# RelationField

./: .gitattributes  .gitignore  3rd_party_licenses.txt  README.md  pyproject.toml
datasets/: __init__.py  preprocess_dataset_gpt.py  replica.py  replica_preprocess.py  rio.py  rio_preprocess.py  scannetpp.py  scannetpp_preprocess.py
datasets/utils/: automatic_mask_generator.py  inference_sam_m2m_auto.py  inference_semsam_m2m_auto.py  visualizer.py
relationfield/: instance_field.py  relation_field.py  relationfield_config.py  relationfield_datamanager.py  relationfield_gaussian_pipeline.py  relationfield_interaction.py  relationfield_model.py  relationfield_pipeline.py  relationfield_pixel_sampler.py  relationfield_renderers.py  semantic_field.py
relationfield/data/utils/: feature_dataloader.py  gpt_bert_dataloader.py  gpt_bert_extractor.py  img_group_model.py  openseg_dataloader.py  openseg_extractor.py  siglip_sam_dataloader.py  siglip_sam_extractor.py
